pyquest/ql/test/semantic_analysis/invalid/test014.ql
// Incompatible types for less equals operation
form testForm {
	"First Question"
	someIdentifier : boolean = 10.0 <= True
}